// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-1fue7gg-0 bfBlbH"
      role="button"
    >
      Option A
    </span>
    <label
      class="flex"
    >
      <input
        class="Toggle__Input-qyyifx-0 WGuGL"
        type="checkbox"
      />
      <div
        class="Toggle__Handle-qyyifx-1 geejDn"
      >
        <span
          class="Toggle__HandleInner-qyyifx-2 eSIhju"
        />
      </div>
    </label>
    <span
      class="Switch__SwitchText-sc-1fue7gg-0 kDRhze"
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`Switch should render disabled 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-1fue7gg-0 cLxmuv"
      disabled=""
      role="button"
    >
      Option A
    </span>
    <label
      class="flex"
    >
      <input
        class="Toggle__Input-qyyifx-0 WGuGL"
        type="checkbox"
      />
      <div
        class="Toggle__Handle-qyyifx-1 jztkAY"
        disabled=""
      >
        <span
          class="Toggle__HandleInner-qyyifx-2 iIyzPS"
          disabled=""
        />
      </div>
    </label>
    <span
      class="Switch__SwitchText-sc-1fue7gg-0 cEXXwG"
      disabled=""
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`Switch should render large labels 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-1fue7gg-0 jDsDxo"
      role="button"
    >
      Option A
    </span>
    <label
      class="flex"
    >
      <input
        class="Toggle__Input-qyyifx-0 WGuGL"
        type="checkbox"
      />
      <div
        class="Toggle__Handle-qyyifx-1 geejDn"
      >
        <span
          class="Toggle__HandleInner-qyyifx-2 eSIhju"
        />
      </div>
    </label>
    <span
      class="Switch__SwitchText-sc-1fue7gg-0 fdIjxR"
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`Switch should render small labels 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-1fue7gg-0 jrkMzU"
      role="button"
    >
      Option A
    </span>
    <label
      class="flex"
    >
      <input
        class="Toggle__Input-qyyifx-0 WGuGL"
        type="checkbox"
      />
      <div
        class="Toggle__Handle-qyyifx-1 geejDn"
      >
        <span
          class="Toggle__HandleInner-qyyifx-2 eSIhju"
        />
      </div>
    </label>
    <span
      class="Switch__SwitchText-sc-1fue7gg-0 khGGFd"
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;
